[package]
name = "launchctl"
version = "0.1.1"
edition = "2021"
authors = ["Sylvan Franklin"]
description = "A simple library for managing system services on MacOS"
repository = "https://github.com/sylvanfranklin/launchctl"
keywords = ["system", "MacOS", "service", "launcher"]
license = "MIT"

[dependencies]
